# aiTestingTool-conversationTesting

./: DISTRIBUTE.md  DOCKER.md  Dockerfile  README.md  conv_tester.db  docker-compose.dist.yml  docker-compose.yml  pyproject.toml
backend/: config.py  db.py  main.py
backend/api/: app_settings.py  batch_runs.py  config_transfer.py  endpoint_configs.py  llm_configs.py  runs.py  test_cases.py
backend/models/: __init__.py  app_setting.py  endpoint_config.py  llm_config.py  run_batch.py  test_case.py  test_run.py  turn.py
backend/schemas/: endpoint_config.py  llm_config.py  run_batch.py  test_case.py  test_run.py  turn.py
backend/services/: conclusion.py  endpoint_caller.py  extractor.py  html_export.py  judge.py  run_log.py  runner.py  simulator.py  templating.py  ws_caller.py
backend/services/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py
tests/: conftest.py  test_extractor.py  test_factory.py  test_judge.py  test_runner.py  test_runner_loop.py  test_simulator.py  test_templating.py
ui/: api.py  app.py  parsers.py  state.py  theme.py
ui/components/: conclusion.py  run_summary.py  shared.py  transcript.py  turn_card.py  ws_logs.py
ui/pages/: batch.py  configs.py  history.py  run.py  runs.py  settings.py
