[project]
name = "conv-tester"
version = "2.0.0.2"
description = "Conversational AI testing tool: simulates users, runs multi-turn conversations against chatbot endpoints, and judges outcomes via LLM."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.3",
    "httpx>=0.27.0",
    "jsonpath-ng>=1.6.1",
    "jinja2>=3.1.4",
    "openai>=1.54.0",
    "anthropic>=0.39.0",
    "websockets>=13.0",
    "streamlit>=1.39.0",
    "python-multipart>=0.0.12",
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.1",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "ui"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
